--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <button id="loginBtn">Login</button>
 <section id="flagSec">
-<img id="ptFlag" src="Images1/Flag_of_Portugal.svg.png" alt="">
-<img id="ukFlag" src="Images1/Flag_of_the_United_Kingdom_(1-2).svg.png" alt="">
-<img id="frFlag" src="Images1/Flag_of_France.png" alt="">
+<img id="ptFlag" src="https://imgtr.ee/images/2023/06/17/YNh3x.png" alt="">
+<img id="ukFlag" src="https://imgtr.ee/images/2023/06/17/YNC8J.png" alt="">
+<img id="frFlag" src="https://imgtr.ee/images/2023/06/17/YNA5z.png" alt="">
 </section>
 
 
@@ -28,7 +28,7 @@
     </header>
 <main>
 
-    <section id="popupSec">
+    <section id="popupSec"> 
             <span id="close">&times;</span>
    
       
