--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
     <section>
 
         <section id="galeria">
-
+<div>
+<form action="/action_page.php">
+  <label for="img">Select image:</label>
+  <input type="file" id="img" name="img" accept="image/*">
+  <input type="submit">
+</form>
+</div>
         </section>
 
         <section id="stock">
