--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <main>
 
     <section id="popupSec"> 
-        <p id="loginTitle">LOGIN</p>
+        <span id="loginTitle">LOGIN</span>
             <span id="close">&times;</span>
 
         <section id="loginSec">
