--- a/index.html
+++ b/index.html
@@ -29,20 +29,21 @@
 <main>
 
     <section id="popupSec"> 
-        <span id="loginTitle">LOGIN</span>
-            <span id="close">&times;</span>
-
+     
+         <span id="close">&times;</span>
         <section id="loginSec">
-        <br><br>
-
+            <span id="loginTitle">LOGIN</span>
+        <br>
         <h3>Username</h4>
         <input type="text">
         <br>
-        <br>
         <h3>Password</h4>
         <input type="password" name="" id="">
-        <br>
         <h6 id="forgotPass">Forgot password?</h6>
+        <br>
+        <button type="submit">Login</button>
+        <br>
+        <h4>Create account?</h4>
     </section>
     </section>
 
